@@ -50,6 +50,7 @@
             "CPAN::Meta" : "2.120900"
          },
          "requires" : {
+            "Crypt::OpenSSL::RSA" : "0",
             "ExtUtils::MakeMaker" : "0",
             "File::Spec" : "0",
             "Module::Signature" : "0",
