@@ -188,6 +188,14 @@ METHODS
     If $format is true, the request is returned as a PEM CSR. Otherwise as
     a binary string.
 
+ certificationRequest
+
+    Returns the binary (ASN.1) section of the request that is signed by the
+    requestor.
+
+    The caller can verify the signature using signatureAlgorithm,
+    certificationRequest and signature(1).
+
  Access methods for the subject's distinguished name
 
     Note that subjectAltName is prefered, and that modern certificate users
@@ -292,9 +300,13 @@ METHODS
 
     Returns the signature algorithm according to its object identifier.
 
- signature
+ signature( $format )
 
-    The signature will be returned in its hexadecimal representation
+    The CSR's signature is returned.
+
+    If $format is true, in binary.
+
+    Otherwise, in its hexadecimal representation.
 
  attributes( $name )
 
@@ -623,6 +635,8 @@ CHANGES
        - Add DSA OIDs
     
        - Add subjectPublicKeyParams(), which provides some description of the key
+    
+       - Add certificationRequest and signature(1) to enable verification of CSR signatures
     
       
 
